remove hardcoded paths

--- a/include/ignition/gui/languages/CMakeLists.txt
+++ b/include/ignition/gui/languages/CMakeLists.txt
@@ -3,7 +3,15 @@ set (translations
   translation_es.ts
   translation_pt.ts
 )
-set(translations ${translations} PARENT_SCOPE)
 
+# ts -> qm
 QT5_ADD_TRANSLATION(translations_qm ${translations})
 add_custom_target(translations ALL DEPENDS ${translations_qm})
+
+# Copy file to binary path so it is close to the generated qm files
+set(lang_qrc "languages.qrc")
+configure_file(${lang_qrc} ${lang_qrc} COPYONLY)
+
+# Propagate variables to parent scope
+set(translations ${translations} PARENT_SCOPE)
+set(lang_qrc ${lang_qrc} PARENT_SCOPE)
